<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/message_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_circle"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_homemms"
                />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_small_material"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/message_title"/>
            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@android:color/black"
                android:textSize="@dimen/abc_text_size_caption_material" />

        </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_content"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/abc_text_size_body_1_material"
            android:textAlignment="gravity"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_gravity="bottom">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:id="@+id/image_attach"
                android:src="@drawable/ic_photo_white_48dp"
                android:tint="@color/colorAccent"
                android:layout_marginRight="4dp"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:id="@+id/audio_attach"
                android:src="@drawable/ic_volume_up_white_48dp"
                android:tint="@color/colorAccent"
                android:layout_marginRight="4dp"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:id="@+id/video_attach"
                android:src="@drawable/ic_movie_white_48dp"
                android:tint="@color/colorAccent"
                android:layout_marginRight="4dp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/timestamp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/abc_text_size_caption_material"
                android:gravity="right"
                android:text="@string/message_timestamp"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/selected_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/selectedOverlay"
        android:visibility="invisible" />

</android.support.v7.widget.CardView>