<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/config_network_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.thesis.mmtt2011.homemms.fragment.ConfigNetworkFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:src="@drawable/ic_launcher"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="32dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-thin"
            android:textColor="@android:color/black"
            android:paddingRight="32dp"
            android:textSize="28sp"
            android:text="@string/config_network"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="64dp"
        android:paddingRight="64dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/wifi_access_form">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/wifi_ssid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ssid_wifi"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/wifi_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:maxLines="1"
                    android:inputType="textVisiblePassword"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/auth_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
        </LinearLayout>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="bottom|end"
            fab:fab_icon="@drawable/ic_navigate_next_white_48dp"
            fab:fab_title="New message"
            fab:fab_colorNormal="#e91e63"
            fab:fab_colorPressed="#ec407a"
            fab:fab_size="normal"/>

    </LinearLayout>
</FrameLayout>
